--- a/control-center/index.html
+++ b/control-center/index.html
@@ -53,7 +53,7 @@
 
 
 <body onload="page_init()">
-<div class="container-fluid vh-100 m-0 p-0">
+<div class="container-fluid min-vh-100 m-0 p-0">
 	<div class="row vh-100 m-0">
 		<div class="col-md-7 order-md-1 col-lg-8 order-lg-1 col-12 order-2 h-100 d-flex flex-column" style="background-color: #00868b;">
 			<!--
@@ -66,21 +66,12 @@
 				<div class="justify-content-center mx-auto">
 					<h4 style="color: white; text-align: center;">messaging, group chat, video &amp; voice calls, conferencing server</h4>
 					<div class="row">
-					<div class="col-9" style="text-align: center; margin: auto;">mesibo on-premise server enables messaging, group chat, video &amp; voice calls, conferencing in your apps.  Since you are hosting the entire server, and database in your own data center, the entire data is under your control and stays with you. This made mesibo the preferred choice for financial institutes, telemedicine, and any app that cares for their sensitive business and user data and their privacy. mesibo on-premise server is GDPR, HIPAA compliant. Learn more about mesibo on-premise <a style="color: #fff; text-decoration: underline;" href="https://mesibo.com/on-premise/" target="_blank">here</a> </div>
+					<div class="col-9" style="text-align: center; margin: auto;">mesibo on-premise server enables real-time messaging, group chat, video &amp; voice calls, conferencing in your apps.  Since you are hosting the entire server, and database in your own data center, the entire data is under your control and stays with you. This made mesibo the preferred choice for financial institutes, telemedicine, and any app that cares for their sensitive business and user data and their privacy. mesibo on-premise server is GDPR, HIPAA compliant. Learn more about mesibo on-premise <a style="color: #fff; text-decoration: underline;" href="https://mesibo.com/on-premise/" target="_blank">here</a> </div>
 					</div>
 					
 					<h4 style="color: white; text-align: center; margin-top: 20px;">Instructions</h4>
-					<div class="w-75" style="text-align: center; margin: auto; margin-bottom: 20px;">These instructions are for setting up mesibo on-premise using this control panel.<br/>However, if you prefer to set it up yourself, refer to the  <a style="color: #fff; text-decoration: underline;" href="https://mesibo.com/documentation/on-premise/" target="_blank">mesibo on-premise documentation</a> for a detailed installation guide.</div>
-					<hr style="border-top: 1px solid #ccc;opacity: 30%; width: 70%">
 					<div class="row">
-					<div class="col-8" style="margin: auto;">
-					<ol style="">				
-						<li>Before using this on-premise control center, you need to set up a password. You will require this password for future administration from this control center.</li>
-						<li>You will require to enter mesibo App token, your MySQL database details and the public IP to configure the server. If you are new to the mesibo, refer to a <a style="color: #fff; text-decoration: underline;" href="https://mesibo.com/documentation/tutorials/get-started/" target="_blank">short tutorial here</a> to learn how to obtain the token.</li>
-						<li>Ensure that the following ports are open: 80, 443, 513, 5222, 5223, 5228, 4443, 5443 and 8443</li>
-						<li>Once the server is running, you can test it using your apps. You can also download mesibo open-source mobile apps from the links below to test your installation.</li>
-					</ol>
-					</div>
+					<div class="col-9" style="text-align: center; margin: auto;">You will be able to configure and run mesibo on-premise in just three steps by following the instructions on the right. These instructions are for setting up mesibo on-premise using this control center. However, if you prefer to set it up yourself, refer to the  <a style="color: #fff; text-decoration: underline;" href="https://mesibo.com/documentation/on-premise/" target="_blank">mesibo on-premise documentation</a> for a detailed installation guide.</div>
 					</div>
 
 					<h4 style="color: white; text-align: center; margin-top: 20px;">mesibo open-source apps</h4>
