--- a/control-center/index.html
+++ b/control-center/index.html
@@ -66,7 +66,7 @@
 				<div class="justify-content-center mx-auto">
 					<h4 style="color: white; text-align: center;">messaging, group chat, video &amp; voice calls, conferencing server</h4>
 					<div class="row">
-					<div class="col-9" style="text-align: center; margin: auto;">mesibo on-premise server enables real-time messaging, group chat, video &amp; voice calls, conferencing in your apps.  Since you are hosting the entire server, and database in your own data center, the entire data is under your control and stays with you. This made mesibo the preferred choice for financial institutes, telemedicine, and any app that cares for their sensitive business and user data and their privacy. mesibo on-premise server is GDPR, HIPAA compliant. Learn more about mesibo on-premise <a style="color: #fff; text-decoration: underline;" href="https://mesibo.com/on-premise/" target="_blank">here</a> </div>
+					<div class="col-9" style="text-align: center; margin: auto;">mesibo on-premise server enables real-time messaging, group chat, video &amp; voice calls, conferencing in your apps.  Since you are hosting the entire server, and database in your own data center, your data is entirely under your control and stays with you. This made mesibo the preferred choice for financial institutes, telemedicine, and all other apps that cares for their sensitive business and user data and their privacy. mesibo on-premise server is GDPR, HIPAA compliant. Learn more about mesibo on-premise <a style="color: #fff; text-decoration: underline;" href="https://mesibo.com/on-premise/" target="_blank">here</a> </div>
 					</div>
 					
 					<h4 style="color: white; text-align: center; margin-top: 20px;">Instructions</h4>
