--- a/control-center/index.html
+++ b/control-center/index.html
@@ -19,7 +19,7 @@
 		<script type="text/javascript" src="third-party/bootstrap.min.js"></script>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="https://api.mesibo.com/backend.js"></script>
+		<script type="text/javascript" src="https://api.mesibo.com/api-backend.js"></script>
 
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
