--- a/control-center/index.html
+++ b/control-center/index.html
@@ -48,6 +48,18 @@
     width: 60%!important;
 }
 
+.show-anim {
+  transform: scaleY(1);
+  transition: transform 1000ms ease 0ms;	
+  transform-origin: top;
+}
+
+.hide-anim {
+  transform: scaleY(0);
+  transition: transform 1000ms ease 0ms;	
+  transform-origin: top;
+}		
+
 </style>
 
 
@@ -110,7 +122,7 @@
 							<h5 class="col-12 modal-title text-center">loading...</h5>
 						</div>
 					</form>
-					<form role="form" id="unreachable">
+					<form role="form" id="unreachable" style="display: none;">
 						<div class="modal-header" >
 							<h5 class="col-12 modal-title text-center">Server is Not Reachable</h5>
 						</div>
@@ -285,6 +297,13 @@
 								<input type="text" class="form-control input-lg" id="dbpass" value="" maxlength="64">
 							</div>
 						</div>
+
+						</div>
+						<div class="form-check" id="resetdb" style="margin: 10px;">
+							<input class="form-check-input" type="checkbox" id="resetdb_check" style="background:#00868b;">
+							<label class="form-check-label" for="firewall">
+								Reset Database (all data will be lost)
+							</label>
 						</div>
 						<div class="form-group">
 							<div style="text-align: center;">                                    
@@ -364,6 +383,10 @@
 						<div class="formbox" >
 						<table class="table table-striped">
 							<tbody>
+								<tr>
+									<td class="text-right pr-4">App:</td>
+									<td id="appname"></td>
+								</tr>
 								<tr>
 									<td class="text-right pr-4">State:</td>
 									<td id="state"></td>
