--- a/control-center/index.html
+++ b/control-center/index.html
@@ -429,7 +429,10 @@
 						<div class="form-group">
 							<div style="text-align: center;">                                    
 								<button type="button" class="btn btn-danger" onclick="reset_config()" >
-									Delete Configuration
+									Reconfigure
+								</button>                                    
+								<button type="button" class="btn btn-info" onclick="update()" >
+									Update
 								</button>                                    
 								<button type="button" class="btn btn-success" onclick="start()" id="start_button">
 									Start Server
