--- a/control-center/index.html
+++ b/control-center/index.html
@@ -402,11 +402,11 @@
 									<td id="enabled"></td>
 								</tr>
 								<tr>
-									<td class="text-right pr-4">Real-time server <a style="color:#00868b;" target="_blank" href="https://mesibo.com/documentation/api/real-time-api/" ><i class="fa fa-book"></i></a>:</td>
+									<td class="text-right pr-4">Real-time server <a style="color:#00868b;" target="_blank" href="https://docs.mesibo.com/api/" ><i class="fa fa-book"></i></a>:</td>
 									<td id="realtime_status"></td>
 								</tr>
 								<tr>
-									<td class="text-right pr-4">Backend server <a style="color:#00868b;" target="_blank" href="https://mesibo.com/documentation/api/backend-api/" ><i class="fa fa-book"></i></a>:</td>
+									<td class="text-right pr-4">Backend server <a style="color:#00868b;" target="_blank" href="https://docs.mesibo.com/api/backend-api/" ><i class="fa fa-book"></i></a>:</td>
 									<td>
 						
 										<div class="form-check">
